tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_errors@undefined_slice_end.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/undefined_slice_end.txt
---
error: Slice end is undefined
 --> undefined_slice_end.txt:1:14
  |
1 | {{ numbers[1:missing] }}
  |              ^^^^^^^
